--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       <p class="site-title-sub">Welcome! This page is</p>
       <h1 class="site-title">Kyosuke Uryu's portfolio</h1>
       <p class="site-description">please look at me</p>
+      <div class="buttons">
+        <a href="#" class="button">about</a>
+        <a href="#" class="button">work</a>
+        <a href="#" class="button">skill</a>
+        <a href="#" class="button">contact</a>
+      </div>
     </header>
     <section class="about">
 
