--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Portfolio of Kyosuke Uryu</title>
     <link href="https://fonts.googleapis.com/css?family=Candal&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -11,25 +12,34 @@
     <header class="header">
       <p class="site-title-sub">Welcome! This page is</p>
       <h1 class="site-title">Kyosuke Uryu's portfolio</h1>
-      <p class="site-description">please look at me</p>
+      <p class="site-description">please check my works</p>
       <div class="buttons">
-        <a href="#" class="button">about</a>
-        <a href="#" class="button">work</a>
-        <a href="#" class="button">skill</a>
-        <a href="#" class="button">contact</a>
+        <div class="buttons-row">
+          <a href="#about" class="button">about me</a>
+          <a href="#work" class="button">my works</a>
+        </div>
+        <div class="buttons-row">
+          <a href="#skill" class="button">skills</a>
+          <a href="#contact" class="button">contact</a>
+        </div>
+      </div>
+      <div class="arrow-down">
+        <i class="arrow fas fa-sort-down"></i>
       </div>
     </header>
-    <section class="about">
+    <main>
+      <section class="about">
 
-    </section>
-    <section class="work">
+      </section>
+      <section class="work">
 
-    </section>
-    <section class="skill">
+      </section>
+      <section class="skill">
 
-    </section>
-    <section class="contact">
+      </section>
+      <section class="contact">
 
-    </section>
+      </section>
+    </main>
   </body>
 </html>
