--- a/index.html
+++ b/index.html
@@ -28,8 +28,19 @@
       </div>
     </header>
     <main>
-      <section class="about">
-
+      <section class="about" id="about">
+        <h2 class="heading">ABOUT ME</h2>
+        <p class="about-text">
+          初めまして、瓜生杏介と申します。<br>
+          私のポートフォリオサイトに足を運んでいただきありがとうございます。
+        </p>
+        <p class="about-text">
+          これまで金融業界で仕事をしておりましたが、30歳を迎え新たなチャレンジをしたいと思いWeb業界に挑戦することとなりました。<br>
+          是非お気軽にご連絡ください！
+        </p>
+        <div class="arrow-down">
+          <i class="arrow fas fa-sort-down"></i>
+        </div>
       </section>
       <section class="work">
 
