[add]worksセクション作成

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <main>
       <section class="about" id="about">
         <h2 class="heading">ABOUT ME</h2>
+        <img class="profile-image" src="images/profile.jpeg" alt="自己紹介画像">
         <p class="about-text">
           初めまして、瓜生杏介と申します。<br>
           私のポートフォリオサイトに足を運んでいただきありがとうございます。
@@ -42,8 +43,24 @@
           <i class="arrow fas fa-sort-down"></i>
         </div>
       </section>
-      <section class="work">
-
+      <section class="work" id="work">
+        <h2 class="heading heading-even">WORKS</h2>
+        <p class="announce">今後随時掲載予定です</p>
+        <div class="works-contents">
+          <div class="work-box">
+            <a href="#" class="work-link">
+              <img class="work-image" src="images/work1.jpg" alt="仕事画像１">
+            </a>
+          </div>
+          <div class="work-box">
+            <a href ="#" class="work-link">
+              <img class="work-image" src="images/work2.jpg" alt="仕事画像２">
+            </a>
+          </div>
+        </div>
+        <div class="arrow-down">
+          <i class="arrow fas fa-sort-down"></i>
+        </div>
       </section>
       <section class="skill">
 
