[add]skillセクション作成

--- a/index.html
+++ b/index.html
@@ -62,8 +62,37 @@
           <i class="arrow fas fa-sort-down"></i>
         </div>
       </section>
-      <section class="skill">
-
+      <section class="skill" id="skill">
+        <h2 class="heading">SKILL</h2>
+        <div class="skill-blocks">
+          <div class="skill-box">
+            <i class="skill-icon fas fa-laptop"></i>
+            <p class="skill-text">
+              フロントエンド<br>
+              使用ツール： HTML,CSS,JavaScript<br>
+              デザイン関連の勉強中です
+            </p>
+          </div>
+          <div class="skill-box">
+            <i class="skill-icon fas fa-server"></i>
+            <p class="skill-text">
+              バックエンド<br>
+              使用ツール： Ruby on Rails<br>
+              Railsを活用し、データベースと連携したアプリケーション作成
+            </p>
+          </div>
+          <div class="skill-box">
+            <i class="skill-icon fas fa-address-card"></i>
+            <p class="skill-text">
+              営業スキル<br>
+              これまで約７年金融業界にて営業をしてまいりました。<br>
+              単純な交渉、プレゼン、その他会計知識などもお役立てできます
+            </p>
+          </div>
+        </div>
+        <div class="arrow-down">
+          <i class="arrow fas fa-sort-down"></i>
+        </div>
       </section>
       <section class="contact">
 
