[add]contactセクション作成、pc向け仮実装

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <div class="buttons">
         <div class="buttons-row">
           <a href="#about" class="button">about me</a>
-          <a href="#work" class="button">my works</a>
+          <a href="#work" class="button button-work">my works</a>
         </div>
         <div class="buttons-row">
-          <a href="#skill" class="button">skills</a>
-          <a href="#contact" class="button">contact</a>
+          <a href="#skill" class="button button-skill">skills</a>
+          <a href="#contact" class="button button-contact">contact</a>
         </div>
       </div>
       <div class="arrow-down">
@@ -94,9 +94,17 @@
           <i class="arrow fas fa-sort-down"></i>
         </div>
       </section>
-      <section class="contact">
-
+      <section class="contact" id="contact">
+        <h2 class="heading heading-even">CONTACT</h2>
+        <form class="contact-form">
+          <input type="text" name="name" placeholder="NAME">
+          <textarea name="message" placeholder="MESSAGE"></textarea>
+          <input class="contact-submit" type="submit" value="SEND">
+        </form>
       </section>
     </main>
+    <footer class="footer">
+      <p>©︎ Kyosuke Uryu 2019</p>
+    </footer>
   </body>
 </html>
