[update]名前うりぼーに変更

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Portfolio of Kyosuke Uryu</title>
+    <title>Portfolio of Urybo</title>
     <link href="https://fonts.googleapis.com/css?family=Candal&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <p class="site-title-sub">Welcome! This page is</p>
-      <h1 class="site-title">Kyosuke Uryu's portfolio</h1>
+      <h1 class="site-title">Urybo's portfolio</h1>
       <p class="site-description">please check my works</p>
       <div class="buttons">
         <div class="buttons-row">
@@ -33,7 +33,7 @@
         <h2 class="heading">ABOUT ME</h2>
         <img class="profile-image" src="images/profile.jpeg" alt="自己紹介画像">
         <p class="about-text">
-          初めまして、瓜生杏介と申します。<br>
+          初めまして、うりぼーと申します。<br>
           私のポートフォリオサイトに足を運んでいただきありがとうございます。
         </p>
         <p class="about-text">
@@ -105,7 +105,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p>©︎ Kyosuke Uryu 2019</p>
+      <p>©︎ Urybo 2019</p>
     </footer>
   </body>
 </html>
