[add]アラート文作成

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       </section>
       <section class="contact" id="contact">
         <h2 class="heading heading-even">CONTACT</h2>
+        <p class="alert-text">現在未実装です</p>
         <form class="contact-form">
           <input type="text" name="name" placeholder="NAME">
           <textarea name="message" placeholder="MESSAGE"></textarea>
