--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
       <section class="contact" id="contact">
         <h2 class="heading heading-even">CONTACT</h2>
         <p class="alert-text">現在未実装です</p>
-        <form class="contact-form">
+        <form action="index.html" class="contact-form">
           <input type="text" name="name" placeholder="NAME">
           <textarea name="message" placeholder="MESSAGE"></textarea>
-          <input class="contact-submit" type="submit" value="SEND">
+          <input class="contact-submit" type="submit" value="SEND" disabled>
         </form>
       </section>
     </main>
